Unreviewed, fix broken pas_compiler_utils.h https://bugs.webkit.org/show_bug.cgi?id=288900 rdar://145901178

pas_compiler_utils.h is completely broken.

1. It is not included as Private in xcodeproj.
2. Its path is not properly set.
3. Using pragma once while it is on libpas.
4. User is not including pas_compiler_utils.h.

* Source/WTF/wtf/SequesteredImmortalHeap.cpp:
* Source/WTF/wtf/SequesteredImmortalHeap.h:
* Source/bmalloc/CMakeLists.txt:
* Source/bmalloc/bmalloc.xcodeproj/project.pbxproj:
* Source/bmalloc/libpas/src/libpas/pas_compiler_utils.h:
* Source/bmalloc/libpas/src/libpas/pas_utils_prefix.h:

Canonical link: https://commits.webkit.org/291423@main